cba almost done

--- a/AppOutput/Methodology/bc_components.tex
+++ b/AppOutput/Methodology/bc_components.tex
@@ -9,8 +9,8 @@ Variable & Sign Reversed	& Welfare Cost \\
 \quad Subject Labor Income	& \\
 \quad Subject Public-transfer Income	& $\checkmark$	& 0.5 \\
 \quad Medicare Costs			& $\checkmark$	& 1.5 \\
-\quad Medicaid Costs			& $\checkmark$	& 1.5 \\
-\quad Out-of-pocket Medical Costs	& $\checkmark$ \\
+\quad Public Medicaid Costs			& $\checkmark$	& 1.5 \\
+\quad Private Medical Costs	& $\checkmark$ \\
 \quad Miscellaneous Medical Costs	& $\checkmark$ \\
 \quad Disability Insurance Claim	& $\checkmark$	&	0.5 \\
 \quad Social Security Claim	& $\checkmark$	&	0.5 \\
