--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -183,7 +183,7 @@ we increase and decrease the value of each component of the benefit and cost str
 multiplying each component by factors ranging from 0 to 3. A factor of 0 is equivalent
 to removing the component entirely from our analysis. In the particular
 case of QALYs, the multiplicative factors correspond to different valuations of a year of perfect
-health, e.g., a QALY equal to 1. For instance, as our current estimates assume a QALY of 1 to be worth
+health, i.e., a QALY equal to 1. For instance, as our current estimates assume a QALY of 1 to be worth
 \$150,000, a factor of 0.5 corresponds to a year of perfect health being
 worth \$75,000, and a factor of 3 corresponds to a year of perfect health
 being worth \$450,000 (all values are in 2014 USD). 
