--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -45,7 +45,7 @@
 
 \noindent \textbf{The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups?  Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else?}
 
-\noindent \textit{Response.} It shows up because there are two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is actually that $\bm{X}_{k,a}^d$ summarizes the treatment effect that the program could have on $Y_{k,a}^d$. Any treatment-control difference in the outcomes of interest arises from a treatment-control difference in $\bm{X}_{k,a}$ (as dictated by the function $\phi$). These points are clearly disguised in the list of steps on pgs.\ 8 and 9.
+\noindent \textit{Response.} It shows up because there are two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is actually that $\bm{X}_{k,a}^d$ summarizes the treatment effect that the program could have on $Y_{k,a}^d$. Any treatment-control difference in the outcomes of interest arises from a treatment-control difference in $\bm{X}_{k,a}$ (as dictated by the function $\phi$). These points are clearly discussed in the list of steps on pgs.\ 8 and 9.
 
 \noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}
@@ -66,7 +66,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Is it really true that you can get by with (6)? If you want to match individual-by-individual (as described in my main comment 4 above), might we want to condition also on outcomes up to age a*? Perhaps I am misunderstanding that condition, since you also state something about X potentially containing lagged variables. You weren't all that clear on this before (see p. 19, top), and this now comes back to haunt me in understanding what it is you do. This needs clarification.}
 
-\noindent \textit{Response.} We understand the source of the confusion and this comment is an opportunity to clarify. In Equation~\eqref{eq:outcome} we define what the relationship between the outcomes of interest $Y_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is actually that $\bm{X}_{k,a}^d$ summarizes the treatment effect that the program could have on $Y_{k,a}^d$. Recall: we do not want to match individual-to-individual. Instead, we want to create comparable samples to treatment and control in the auxiliary samples. These points are clearly disguised in the list of steps on pgs.\ 8 and 9.
+\noindent \textit{Response.} We understand the source of the confusion and this comment is an opportunity to clarify. In Equation~\eqref{eq:outcome} we define what the relationship between the outcomes of interest $Y_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is actually that $\bm{X}_{k,a}^d$ summarizes the treatment effect that the program could have on $Y_{k,a}^d$. Recall: we do not want to match individual-to-individual. Instead, we want to create comparable samples to treatment and control in the auxiliary samples. These points are clearly discussed in the list of steps on pgs.\ 8 and 9.
 
 \noindent \textbf{Editor. Cut figure 2: TMI. This is technical appendix material. Key results ``in print'' only, please.}
 
