--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -8,7 +8,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix \\ Gender Differences in the Benefits of an Influential Early Childhood Program}}
+\title{\Large \textbf{Appendix \\ Gender Differences in \\ the Benefits of an Influential Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, and Anna L. Ziff}
 \date{\today}
