--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -1,4 +1,4 @@
-\section{Health Outcomes in the Future America Model (FAM)} \label{appendix:health}
+\section{Health Outcomes in the Future Adult Model (FAM)} \label{appendix:health}
 
 \input{Appendices/Health/bgdesc.tex}
 \input{Appendices/Health/data.tex}
